# rshell

./: .gitignore  CMakeLists.txt  README.md  main.cpp  names.txt
head/: And.h
header/: And.h  CMD.h  Connector.h  Exit.h  InRed.h  InputRed.h  Or.h  OutRed.h  Pipe.h  Semicolon.h  Test.h  Token.h
integration_tests/: commented_command_tests.sh  commmented_command_test  exit_command_tests.sh  input_redirection_test  multiple_commands_test  multiple_commands_tests.sh  output_redirection_tests.sh  parentheses_command_test  parentheses_command_tests.sh  pipe_operator_tests.sh  pipe_test  single_command_test  single_command_tests.sh  test_command_test  test_symbolic_tests.sh
integration_tests/textfiles/: some.txt  test.txt
prototype/: ex.txt  in.txt  main.cpp  parse.cpp  popen.cpp  pretest.cpp  t.cpp  testfile1.cpp
src/: And.cpp  And.h  CMD.h  Connector.h  Exit.h  InRed.cpp  Or.cpp  Or.h  OutRed.cpp  Pipe.cpp  Semicolon.cpp  Semicolon.h  Test.cpp  Test.h  Token.cpp  Token.h  example.hpp  main.cpp  postfix.hpp  test.cpp
unit_tests/: all_unit_tests.cpp  classes_unit_test.h  multiple_line_unit_test.h  paren_unit_test.h  single_line_unit_test.h  test_unit_test.h  unit_test.cpp
